--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -61,8 +61,8 @@ msgid "APY, variable"
 msgstr "APY, variable"
 
 #: src/ui-config/errorMapping.tsx
-msgid "AToken supply is not zero"
-msgstr "AToken supply is not zero"
+msgid "MToken supply is not zero"
+msgstr "MToken supply is not zero"
 
 #: src/modules/governance/GovernanceTopPanel.tsx
 msgid "Aave Governance"
@@ -93,8 +93,8 @@ msgid "Action requires an active reserve"
 msgstr "Action requires an active reserve"
 
 #: src/components/transactions/FlowCommons/Success.tsx
-msgid "Add aToken to the wallet to track your supply balance."
-msgstr "Add aToken to the wallet to track your supply balance."
+msgid "Add mToken to the wallet to track your supply balance."
+msgstr "Add mToken to the wallet to track your supply balance."
 
 #: src/components/transactions/FlowCommons/Success.tsx
 msgid "Add to wallet"
@@ -1457,8 +1457,8 @@ msgid "The app is running in testnet mode. Learn how it works in"
 msgstr "The app is running in testnet mode. Learn how it works in"
 
 #: src/ui-config/errorMapping.tsx
-msgid "The caller of the function is not an AToken"
-msgstr "The caller of the function is not an AToken"
+msgid "The caller of the function is not an MToken"
+msgstr "The caller of the function is not an MToken"
 
 #: src/ui-config/errorMapping.tsx
 msgid "The caller of this function must be a pool"
